# gator

./: .gitignore  README.md  run_app.sh
backend/: main.py  main_2.py  pyproject.toml  server.py  setup.sh
backend/src/: gapp.py  utils.py
backend/src/gdata/: datasets.py  transforms.py  upload_utils.py
backend/src/gpipeline/: drawings.py  gatector.py  gator.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: file-dropzone.tsx  providers.tsx
frontend/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  field.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx
frontend/hooks/: useDetectStream.ts
frontend/lib/: backend.ts  sizes.ts
