[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=14.4.0",
    "boxmot==10.0.46",
    "einops==0.7.0",
    "eva-decord>=0.6.1",
    "fastapi>=0.128.0",
    "gdown==5.2.0",
    "gradio==5.29.1",
    "hydra-core==1.3.2",
    "iopath==0.1.10",
    "lightning==2.5.1.post0",
    "numpy==1.24.4",
    "opencv-python==4.8.1.78",
    "pandas==2.0.3",
    "pillow==10.4.0",
    "rich==14.0.0",
    "scipy==1.11.4",
    "seaborn>=0.13.2",
    "termcolor==2.4.0",
    "timm==1.0.15",
    "torch==2.1.1",
    "torchmetrics==1.2.1",
    "torchvision==0.16.1",
    "transformers==4.35.2",
    "ultralytics>=8,<9",
    "uvicorn>=0.40.0",
    "wandb==0.16.1",
]
